--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
     <title> Portfolio Etienne Mallarmé Schwob </title>
 
 </head>
@@ -9,19 +10,94 @@
 <h2>
     Profil
 </h2>
+<br>
 <h3>
     À propos de moi
 </h3>
   <p>
-    je m'appelle Etienne Mallarmé Schwob, j'ai 19 ans. Je suis actuellement étudiant en deuxième année de BTS SIO option SLAM (Solutions Logicielles et Applications Métier). 
-    <br> Appréciant l'informatique depuis mon plus jeune âge c'est tout naturellement que je me suis tourné vers une formation de Science Technologique du Management et de 
-    <br>     Gestion (STMG) en option informatique me permettant de commencer à apprécier le développement. C'est donc pour cela que j'ai choisie cette formation et cette spécialité (SLAM).
+          je m'appelle Etienne Mallarmé Schwob, j'ai 19 ans. Je suis actuellement étudiant en deuxième année de BTS SIO option SLAM (Solutions Logicielles et Applications Métier) au lycée Charles De Foucauld. 
+    <br>  Appréciant l'informatique depuis mon plus jeune âge c'est tout naturellement que je me suis tourné vers une formation de Science Technologique du Management et de 
+    <br>  Gestion (STMG) en option informatique me permettant de commencer à apprécier le développement. C'est donc pour cela que j'ai choisie cette formation et cette spécialité (SLAM).
   </p> 
+  <br>
+  <h3>
+    Mes expérience professionnel
+  </h3>
+  <p>
+    - stage de six semaine au sein de l'entreprise Abeille Assurance (anciennement Aviva France)
+  </p>
+  <br>
+  <h3>
+    Mes qualités
+  </h3>
+    <p>
+      attachant(e) 
+      mignon(ne)
+      gentil(le)
+      discret(e)
+      serieux(se)
+      calme
+      d'après les amies de mes amies : séduisant (j'ai des doutes)
+    </p>
+
+    <br>
+  <h3>
+    Language maîtrisés
+  </h3>
+  <p>
+    <table>
+    
+      - PHP    <tr><label for="file">File progress:</label>
+
+    <progress id="filephp" max="100" value="75"> 75% </progress></tr>
+    <br>
+    - HTML   <tr><label for="file">File progress:</label>
+
+    <progress id="filehtml" max="100" value="90"> 90% </progress></tr>
+    <br>
+     - SQL    <tr><label for="file">File progress:</label>
+
+    <progress id="filesql" max="100" value="95"> 95% </progress></tr>
+    <br>
+     - JAVA   <tr><label for="file">File progress:</label>
+
+    <progress id="filejava" max="100" value="60"> 60% </progress></tr>
+    <br>
+    - LARP   <tr><label for="file">File progress:</label>
+
+    <progress id="filelarp" max="100" value="100"> 100% </progress></tr>
+    <br>
+    -
+  </table>
+  </p>
+<br>
+
+<h3>
+  Outils maîtrisés 
+</h3>  
+  <p>
+    - Eclipse
+    <br>
+    - CodeBlocks
+    <br>
+    - VirtualBox
+    <br>
+    - VMWare
    
+  </p>
+<br>
 
-
+  <h3>
+    Mon CV 
+</h3>
+<button><a href="ETIENNE MALLARMÉ SCHWOB.pdf"> Mon CV</a>
+ 
+</button>
 </body>
 
 
 
 </html>
+
+
+<ajouter les outils maitrisés , les projets réalisés, les langagues maitrisés, stage, parcour pro et photo.
