--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,9 @@
       discret(e)
       serieux(se)
       calme
-      d'après les amies de mes amies : séduisant (j'ai des doutes)
+      séduisant 
+      <!-- sagittaire <3 comme Katia la best !! et la plus belle (period) -->
+
     </p>
 
     <br>
