--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     À propos de moi
 </h3>
   <p>
-          je m'appelle Etienne Mallarmé Schwob, j'ai 19 ans. Je suis actuellement étudiant en deuxième année de BTS SIO option SLAM (Solutions Logicielles et Applications Métier) au lycée Charles De Foucauld. 
+          Je m'appelle Etienne Mallarmé Schwob, j'ai 19 ans. Je suis actuellement étudiant en deuxième année de BTS SIO option SLAM (Solutions Logicielles et Applications Métier) au lycée Charles De Foucauld. 
     <br>  Appréciant l'informatique depuis mon plus jeune âge c'est tout naturellement que je me suis tourné vers une formation de Science Technologique du Management et de 
     <br>  Gestion (STMG) en option informatique me permettant de commencer à apprécier le développement. C'est donc pour cela que j'ai choisie cette formation et cette spécialité (SLAM).
   </p> 
@@ -107,10 +107,11 @@
   <h3 id = "profil">
     Mon CV 
 </h3>
-<button id = "see"><a href="image/ETIENNE MALLARMÉ SCHWOB.pdf"> Accéder à mon CV</a> 
+<button id = "see"><a  href="image/ETIENNE MALLARMÉ SCHWOB.pdf" target="_blank" rel="noreferrer noopener" download=""
+  <strong> Télécharger mon CV </strong></a>
 </button>
 <button id = "DL">
-  <a class="wp-block-button__link" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" target="_blank" rel="noreferrer noopener" download=""
+  <a class="wp-block-button__link" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download>
   <strong> Télécharger mon CV </strong></a>
 </button>
 </body>
@@ -121,3 +122,4 @@
 
 
 <ajouter les outils maitrisés , les projets réalisés, les langagues maitrisés, stage, parcour pro et photo.
+href="image/ETIENNE MALLARMÉ SCHWOB.pdf"> Accéder à mon CV</a> 
