ajout des projets
reste à mettre des images et explications

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,6 @@
   </h3>
     <p id = "propos">
       → attachant <br>
-      → mignon <br>
       → gentil <br>
       → discret <br>
       → serieux <br>
@@ -103,6 +102,14 @@
    
   </p>
 <br>
+
+<h3 id = "profil">
+  Mes projets 
+</h3>
+<button id = "see"><a  href="projet.html" target="_blank" rel="noreferrer noopener" download=""
+  <strong> Accéder à mes projets </strong></a>
+</button>
+
 
   <h3 id = "profil">
     Mon CV 
