--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
   <strong> Télécharger mon CV </strong></a>
 </button>
 <button id = "DL">
-  <a class="wp-block-button__link" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download>
+  <a class="wp-block-button__link" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf">
   <strong> Télécharger mon CV </strong></a>
 </button>
 </body>
