--- a/projet.html
+++ b/projet.html
@@ -17,7 +17,13 @@
       <p>
         création d'une base de données pour un magasin de sucrerie (fictif) en utilisant la méthode Merise. Donc la mise en place d'un modèle conceptuel des données par rapport aux besoins du projet,
     <br> puis mise en place du modèle conceptuel des données afin de pouvoir en SQL créer la base de donnée.
-        <br>  
+    <br> <br>
+    <img  id="merise"src="image/sucrerie MCD.png">
+    <br> <i>Modèle Conceptuel de Données du projet mettant en avant les différentes entités présentes et leur caractéristiques, 
+    <br> ainsi que les liens et associations entre elles. </i> 
+    <br> <img  id="MLD"src="image/sucrerie MLD.png">
+    <br> <i id="I2"> Modèle Logique des Données fait à partir du MCD et qui va nous permettre de faire la base de données sur MySQL</i> 
+
 </p>
 
 <h3 id = "profil">
