menu et autre pages

--- a/projet.html
+++ b/projet.html
@@ -4,11 +4,37 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
     <title> Portfolio Etienne Mallarmé Schwob </title>
-
+    <div id="conteneur">    
+      <img  id="fit-picture"src="image/pro3.jpg"> </div>
+      <nav>
+        <ul>
+          <li class="menu-deroulant">
+            <a href="#">Services</a>
+            <ul class="sous-menu">
+              <li><a href="#">Graphisme</a></li>
+              <li><a href="#">Web & App</a></li>
+              <li><a href="#">Marketing</a></li>
+            </ul>
+          </li>
+          <li class="menu-deroulant">
+            <a href="#">Réalisations</a>
+            <ul class="sous-menu">
+              <li><a href="#">SpaceX</a></li>
+              <li><a href="#">Codeur.com</a></li>
+            </ul>
+          </li>
+          <li><a href="#">À propos</a></li>
+          <li><a href="#">Contactez-nous</a></li>
+        </ul>
+      </nav>
 </head>
 <body>
-  <div id="conteneur">    
-    <img  id="fit-picture"src="image/pro3.jpg"> </div>
+ 
+
+
+
+   
+
 
   <br>
     <h3 id = "projet">
