--- a/projet.html
+++ b/projet.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
     <title> Portfolio Etienne Mallarmé Schwob </title>
@@ -8,23 +8,24 @@
       <img  id="fit-picture"src="image/pro3.jpg"> </div>
       <nav>
         <ul>
+          <li><a href="portfolio.html">Accueil</a></li>
+          
           <li class="menu-deroulant">
-            <a href="#">Services</a>
+            <a href="BTS.html">BTS SIO</a>
             <ul class="sous-menu">
-              <li><a href="#">Graphisme</a></li>
-              <li><a href="#">Web & App</a></li>
-              <li><a href="#">Marketing</a></li>
+              <li><a href="#SLAM">SLAM</a></li>
+              <li><a href="#SISR">SISR</a></li>
             </ul>
           </li>
           <li class="menu-deroulant">
-            <a href="#">Réalisations</a>
+            <a href="projet.html">Projet</a>
             <ul class="sous-menu">
-              <li><a href="#">SpaceX</a></li>
-              <li><a href="#">Codeur.com</a></li>
+              <li><a href="#Sucrerie">Sucrerie</a></li>
+              <li><a href="#Festival">Festival</a></li>
+              <li><a href="#Parking">Parking</a></li>
             </ul>
           </li>
-          <li><a href="#">À propos</a></li>
-          <li><a href="#">Contactez-nous</a></li>
+          <li><a href="Veille.html">Veille</a></li>
         </ul>
       </nav>
 </head>
@@ -49,7 +50,7 @@
     <br> ainsi que les liens et associations entre elles. </i> 
     <br> <img  id="MLD"src="image/sucrerie MLD.png">
     <br> <i id="I2"> Modèle Logique des Données fait à partir du MCD et qui va nous permettre de faire la base de données sur MySQL</i> 
-
+    
 </p>
 
 <h3 id = "profil">
@@ -62,3 +63,7 @@
 
 
     </html>
+
+    <button id="DL"><a href="projet/Festival/index.php">    <strong> Projet Festival </strong></a>
+  
+    </button>
