contacter + bts sio

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,5 @@
 <body>
 
   <div class="titre-page">
-    <h1 class="font-alt color-white font-w-900 center-text">Ma Veille</h2>
-
+    <h1 class="font-alt color-white font-w-900 center-text">Me Contacter </h2>
 </div>
-    
-
-    
