--- a/projet.html
+++ b/projet.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
     <title> Portfolio Etienne Mallarmé Schwob </title>
-    <div id="conteneur">    
-      <img  id="fit-picture"src="image/pro3.jpg"> </div>
+    
       <nav>
         <ul>
           <li><a href="portfolio.html">Accueil</a></li>
@@ -26,6 +25,7 @@
             </ul>
           </li>
           <li><a href="Veille.html">Veille</a></li>
+          <li><a href="contact.html">Me contacter</a></li>
         </ul>
       </nav>
 </head>
@@ -36,9 +36,10 @@
 
    
 
-
+<div class="titre-page">
+  <h1 class="font-alt color-white font-w-900 center-text">Mes Projets</h2>
   <br>
-    <h3 id = "projet">
+    <h3 class="font-alt color-white font-w-900 center-text" id = "projet">
         Merise et Base de Données 
       </h3>
       <p>
@@ -67,3 +68,4 @@
     <button id="DL"><a href="projet/Festival/index.php">    <strong> Projet Festival </strong></a>
   
     </button>
+  </div>
