--- a/Compétence.html
+++ b/Compétence.html
@@ -30,8 +30,7 @@
         </ul>
       </nav>
 </head>
-<body>
-
-  <div class="titre-page">
-    <h1 class="font-alt color-white font-w-900 center-text">Me Contacter </h2>
-</div>
+<div class="titre-page"id="nom">
+    <h1 class="font-alt color-white font-w-900 center-text">Mes compétences</h2>
+    
+  </div>
