--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
           </li>
           <li><a href="Veille.html">Veille</a></li>
           <li><a href="contact.html">Me contacter</a></li>
+          <li><a href="Compétence.html">Mes compétences</a></li>
         </ul>
       </nav>
 </head>
