--- a/projet.html
+++ b/projet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>  
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
@@ -12,20 +12,21 @@
           <li class="menu-deroulant">
             <a href="BTS.html">BTS SIO</a>
             <ul class="sous-menu">
-              <li><a href="#SLAM">SLAM</a></li>
-              <li><a href="#SISR">SISR</a></li>
+              <li><a href="BTS.html">SLAM</a></li>
+              <li><a href="BTS.html">SISR</a></li>
             </ul>
           </li>
           <li class="menu-deroulant">
             <a href="projet.html">Projet</a>
             <ul class="sous-menu">
-              <li><a href="#Sucrerie">Sucrerie</a></li>
+              <li><a href="projet.html/#Sucrerie">Sucrerie</a></li>
               <li><a href="#Festival">Festival</a></li>
               <li><a href="#Parking">Parking</a></li>
             </ul>
           </li>
           <li><a href="Veille.html">Veille</a></li>
           <li><a href="contact.html">Me contacter</a></li>
+          <li><a href="Compétence.html">Mes compétences</a></li>
         </ul>
       </nav>
 </head>
