contact et finition projet

--- a/projet.html
+++ b/projet.html
@@ -37,35 +37,62 @@
    
 
 <div class="titre-page">
-  <h1 class="font-alt color-white font-w-900 center-text">Mes Projets</h2>
-  <br>
-    <h3 class="font-alt color-white font-w-900 center-text" id = "projet">
+  <h1 class="font-alt color-white font-w-900 center-text">Mes Projets</h1>
+  <br> </div>
+  <div class="sous-titre">
+    <h3 class="font-alt font-w-600 center-text" >
+      
         Merise et Base de Données 
       </h3>
+    </div>
+    <div id="bdd">
       <p>
-        création d'une base de données pour un magasin de sucrerie (fictif) en utilisant la méthode Merise. Donc la mise en place d'un modèle conceptuel des données par rapport aux besoins du projet,
-    <br> puis mise en place du modèle conceptuel des données afin de pouvoir en SQL créer la base de donnée.
+        création d'une base de données pour un magasin de sucrerie (fictif) en utilisant la méthode Merise. Donc la mise en place d'un modèle conceptuel des données par rapport aux besoins du
+        <br>  projet, puis mise en place du modèle conceptuel des données afin de pouvoir en SQL créer la base de donnée.
     <br> <br>
+    <a class="image featured">
     <img  id="merise"src="image/sucrerie MCD.png">
+    </a>
     <br> <i>Modèle Conceptuel de Données du projet mettant en avant les différentes entités présentes et leur caractéristiques, 
     <br> ainsi que les liens et associations entre elles. </i> 
     <br> <img  id="MLD"src="image/sucrerie MLD.png">
     <br> <i id="I2"> Modèle Logique des Données fait à partir du MCD et qui va nous permettre de faire la base de données sur MySQL</i> 
     
-</p>
+</p></div>
 
-<h3 id = "profil">
-    PHP et Modèle Vue Contrôleur
-  </h3>
+<div class="sous-titre">
+<h3 class="font-alt font-w-600 center-text" >
+  PHP et Modèle Vue Contrôleur
+</h3> </div>
+<div>
+  <p>
+      Modification d'un site internet par deux fois, la première afin de changer le contenu et de pouvoir utiliser du PHP en utilisant notamment les fonctions PDO,
+  <br> puis la deuxième modification consistant à changer ce qui avait déjà été fait en Modèle Vue Contrôleur.
+   <br>
+   <br><button id = "DL">   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black">
+        lien github du projet MVC
+      </a> </button>
+</p>
+</div>
+
+<div class="sous-titre">
+  <h3 class="font-alt font-w-600 center-text" >
+    Personnel
+  </h3> </div>
+  <div>
     <p>
-        Modification d'un site internet par deux fois, la première afin de changer le contenu et de pouvoir utiliser du PHP en utilisant notamment les fonctions PDO,
-    <br> puis la deuxième modification consistant à changer ce qui avait déjà été fait en Modèle Vue Contrôleur.
-    </p>
+        Création d'un MCD ainsi que d'une application permettant de gérer les différents employés des différentes ligues de la M2L.
+    <br> Création de permission administrateur pour un employé par ligue, ainsi que d'une personne qui va pouvoir avoir les droits administrateurs de tout.
+    <br> L'application est effectuée en Java et permettra notamment de pouvoir ajouter, modifier ou supprimer des ligues ou encore des employés. 
+    <br> voire même d'assigner ou de retirer des droits administrateur à un employé.
+     <br>
+     <br><button id = "DL">   <a href="https://github.com/etihaine/personnel  " class="nounderline color-black">
+          lien github du projet Personnel
+        </a> </button>
+  </p>
+  </div>
+
 
 
     </html>
 
-    <button id="DL"><a href="projet/Festival/index.php">    <strong> Projet Festival </strong></a>
-  
-    </button>
-  </div>
