--- a/contact.html
+++ b/contact.html
@@ -34,3 +34,14 @@
   <div class="titre-page">
     <h1 class="font-alt color-white font-w-900 center-text">Me Contacter </h2>
 </div>
+<div>
+  <p> 
+    <h2 class="font-w-600 color-theme center titre ">Pour me contacter : </h2>
+  </p>
+ <h3><div class="col-md-6 center-text contact">
+      <div class="indentation-list-contact ">- par mail : etiennemallarmeschwob@gmail.com</div>
+          <div class="indentation-list-contact">- Par téléphone : 06 49 99 94 92</div>
+          <div class="indentation-list-contact">- par instagram : etienne_mallasch</div>
+
+        </div></h3> 
+</div>
