--- a/portfolio.html
+++ b/portfolio.html
@@ -130,10 +130,10 @@
 <h3 id = "veille">
   Ma veille 
 </h3> </tr>
-<tr><button id = "see"><a  href="projet.html" target="_blank" rel="noreferrer noopener" download=""
+<tr><button id = "see"><a class="nounderline color-black" href="projet.html" target="_blank" rel="noreferrer noopener" download=""
   <strong> Accéder à mes projets </strong></a>
 </button>
-<button id = "see"><a  href="Veille.html" target="_blank" rel="noreferrer noopener" download=""
+<button id = "see"><a  class="nounderline color-black" href="Veille.html" target="_blank" rel="noreferrer noopener" download=""
   <strong> Accéder à ma veille </strong></a>
 </button> 
 </tr> 
@@ -142,11 +142,11 @@
   <h3 id = "profil">
     Mon CV 
 </h3>
-<button id = "see"><a  href="image/ETIENNE MALLARMÉ SCHWOB.pdf" target="_blank" rel="noreferrer noopener" download=""
+<button id = "see"><a  class="nounderline color-black " href="image/ETIENNE MALLARMÉ SCHWOB.pdf" target="_blank" rel="noreferrer noopener" download="Etienne Mallarmé Schwob CV.pdf"
   <strong> Télécharger mon CV </strong></a>
 </button>
 <button id = "DL">
-  <a class="wp-block-button__link" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf">
+  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf">
   <strong> Télécharger mon CV </strong></a>
   
 </button>
