--- a/BTS.html
+++ b/BTS.html
@@ -26,14 +26,13 @@
           </li>
           <li><a href="Veille.html">Veille</a></li>
           <li><a href="contact.html">Me contacter</a></li>
-          <li><a href="Compétence.html">Mes compétences</a></li>
         </ul>
       </nav>
 </head>
 <body>
 
     
-    <div class="conteneur">
+   
     <div class="titre-page"> 
   <h1 class="font-alt color-white font-w-900 center-text">BTS SIO</h1>
     </div>   
@@ -46,10 +45,14 @@
             L’acronyme SISR signifie « Solutions d’infrastructure, systèmes et réseaux ». Voici des précisions sur cette formation et ses débouchés.
           </div>
           <div class="indentation">
-            L’option SISR est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance d’infrastructures réseaux. <br> Assurer la sécurité, la maintenance et l’installation des réseaux et des équipements informatiques font partie des principales missions des futurs administrateurs, techniciens ou pilotes d’exploitation.
+            L’option SISR est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance d’infrastructures réseaux. <br>
+            <br>Assurer la sécurité, la maintenance et l’installation des réseaux et des équipements informatiques font partie des principales missions des futurs administrateurs,
+            <br> techniciens ou pilotes d’exploitation. 
+              <br>
           </div>
           <div class="indentation">
-            Des cours plus généraux viendront compléter la formation et apporter des compétences plus généralistes, permettant ainsi aux diplômés d’être opérationnels dans n’importe quelle entreprise.
+            Des cours plus généraux viendront compléter la formation et apporter des compétences plus généralistes, 
+            <br> permettant ainsi aux diplômés d’être opérationnels dans n’importe quelle entreprise.
           </div>
           <div class="indentation">
             Voici les débouchés avec un BTS SIO SISR:
@@ -66,10 +69,10 @@
         <div class="col-md-6">
           <h6 class="font-w-600 color-theme center titre SLAM" >Option SLAM</h6>
           <div class="indentation">
-            Le signe SLAM signifie « Solutions Logicielles et Applications Métier ». Voici quelques indications sur cette seconde option du BTS SIO, ainsi des précisions sur cette formation et ses débouchés.
+            Le signe SLAM signifie « Solutions Logicielles et Applications Métier ». Voici quelques indications sur cette seconde option du BTS SIO,<br>ainsi des précisions sur cette formation et ses débouchés.
           </div>
           <div class="indentation">
-            L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. Grâce à des cours spécifiques, les diplômés seront capables 
+            L’option SLAM est destinée aux étudiants qui s’orientent vers les métiers liés à la conception et la maintenance de programmes applicatifs. <br>Grâce à des cours spécifiques, les diplômés seront capables 
             <br> de gérer un parc informatique ou d’administrer un réseau au sein d’une entreprise.
           </div>
           <div class="indentation">
@@ -92,7 +95,6 @@
         <br>
         <p class="source"><i>Source: Synthèse de différents sites (onisep, letudiant, dimension-bts)</i></p>
        </div>
-  </div>
 
 </body>
 </html>
