--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           </li>
           <li><a href="Veille.html">Veille</a></li>
           <li><a href="contact.html">Me contacter</a></li>
-          <li><a href="Compétence.html">Mes compétences</a></li>
+          
         </ul>
       </nav>
 </head>
@@ -131,26 +131,23 @@
 <h3 id = "veille">
   Ma veille 
 </h3> </tr>
-<tr><button id = "see"><a class="nounderline color-black" href="projet.html" target="_blank" rel="noreferrer noopener" download=""
+<tr><p><button id = "DL"><a class="nounderline color-black" href="projet.html" target="_blank" rel="noreferrer noopener" download=""
   <strong> Accéder à mes projets </strong></a>
 </button>
-<button id = "see"><a  class="nounderline color-black" href="Veille.html" target="_blank" rel="noreferrer noopener" download=""
+<button id = "DL"><a  class="nounderline color-black" href="Veille.html" target="_blank" rel="noreferrer noopener" download=""
   <strong> Accéder à ma veille </strong></a>
-</button> 
+</button> </p>
 </tr> 
 </table><br>
 
   <h3 id = "profil">
     Mon CV 
 </h3>
-<button id = "see"><a  class="nounderline color-black " href="image/ETIENNE MALLARMÉ SCHWOB.pdf" target="_blank" rel="noreferrer noopener" download="Etienne Mallarmé Schwob CV.pdf"
-  <strong> Télécharger mon CV </strong></a>
-</button>
-<button id = "DL">
-  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf">
+<p><button id = "DL">
+  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB (1).pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf">
   <strong> Télécharger mon CV </strong></a>
   
-</button>
+</button></p>
 </body>
 
 
