rajout de la veille

--- a/BTS.html
+++ b/BTS.html
@@ -19,9 +19,9 @@
           <li class="menu-deroulant">
             <a href="projet.html">Projet</a>
             <ul class="sous-menu">
-              <li><a href="projet.html/#Sucrerie">Sucrerie</a></li>
-              <li><a href="#Festival">Festival</a></li>
-              <li><a href="#Parking">Parking</a></li>
+              <li><a href="projet.html">Sucrerie</a></li>
+              <li><a href="projet.html">Festival</a></li>
+              <li><a href="projet.html">Parking</a></li>
             </ul>
           </li>
           <li><a href="Veille.html">Veille</a></li>
