--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,13 @@
           <li class="menu-deroulant">
             <a href="projet.html">Projet</a>
             <ul class="sous-menu">
-              <li><a href="projet.html/#Sucrerie">Sucrerie</a></li>
-              <li><a href="#Festival">Festival</a></li>
-              <li><a href="#Parking">Parking</a></li>
+              <li><a href="projet.html">Sucrerie</a></li>
+              <li><a href="projet.html">Festival</a></li>
+              <li><a href="projet.html">Parking</a></li>
             </ul>
           </li>
           <li><a href="Veille.html">Veille</a></li>
           <li><a href="contact.html">Me contacter</a></li>
-          
         </ul>
       </nav>
 </head>
@@ -62,6 +61,16 @@
     Utilisation d'une base de données Oracle.
   </p>
   <br>
+  <h4>
+    Abeille Assurance (anciennement Aviva France)   <i>03 janvier 2023 - 03 février 2023</i>:  
+  
+  <p>
+    
+
+    création d'une page front web en Angular, Javascript et Spring.
+  </p>
+  <br>
+</h4>
   <h3 id = "propos">
     Mes qualités :
   </h3>
@@ -125,26 +134,41 @@
   </p>
 <br>
 <table>
-<tr><h3 id = "profil">
-  Mes projets 
-</h3> 
-<h3 id = "veille">
-  Ma veille 
-</h3> </tr>
-<tr><p><button id = "DL"><a class="nounderline color-black" href="projet.html" target="_blank" rel="noreferrer noopener" download=""
-  <strong> Accéder à mes projets </strong></a>
-</button>
-<button id = "DL"><a  class="nounderline color-black" href="Veille.html" target="_blank" rel="noreferrer noopener" download=""
-  <strong> Accéder à ma veille </strong></a>
-</button> </p>
+<tr>
+  <td>
+    <h3 id = "profil">
+    Mes projets 
+    </h3>
+  </td>
+  <td>
+    <h3 id = "veille">
+    Ma veille 
+    </h3> 
+  </td>
+</tr>
+<tr>
+  <td>
+    <p><button id = "DL"><a class="nounderline color-black" href="projet.html" rel="noreferrer noopener" download=""
+    <strong> Accéder à mes projets </strong></a>
+    </button>
+    </p>
+  </td>
+  <td>
+    <p>
+    <button id = "DL"><a  class="nounderline color-black" href="Veille.html" rel="noreferrer noopener" download=""
+    <strong> Accéder à ma veille </strong></a>
+    </button>
+    </p>
+  </td>
 </tr> 
-</table><br>
+</table>  
+<br>
 
   <h3 id = "profil">
     Mon CV 
 </h3>
 <p><button id = "DL">
-  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB (1).pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf">
+  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB (1).pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf" target="_blank">
   <strong> Télécharger mon CV </strong></a>
   
 </button></p>
