projet page nouvelle

--- a/projet.html
+++ b/projet.html
@@ -69,7 +69,7 @@
       Modification d'un site internet par deux fois, la première afin de changer le contenu et de pouvoir utiliser du PHP en utilisant notamment les fonctions PDO,
   <br> puis la deuxième modification consistant à changer ce qui avait déjà été fait en Modèle Vue Contrôleur.
    <br>
-   <br><button id = "bouton_Projet" >   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black center-text">
+   <br><button id = "bouton_Projet" >   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black center-text" target="_blank">
         lien github du projet MVC
       </a> </button>
 </p>
@@ -86,7 +86,7 @@
     <br> L'application est effectuée en Java et permettra notamment de pouvoir ajouter, modifier ou supprimer des ligues ou encore des employés. 
     <br> voire même d'assigner ou de retirer des droits administrateur à un employé.
      <br>
-     <br><button id = "bouton_Projet">   <a href="https://github.com/etihaine/personnel  " class="nounderline color-black">
+     <br><button id = "bouton_Projet">   <a href="https://github.com/etihaine/personnel  " class="nounderline color-black" target="_blank">
           lien github du projet Personnel
         </a> </button>
   </p>
