tableau des compétences

--- a/projet.html
+++ b/projet.html
@@ -57,6 +57,10 @@
     <br> ainsi que les liens et associations entre elles. </i> 
     <br> <img  id="MLD"src="image/sucrerie MLD.png">
     <br> <i id="I2"> Modèle Logique des Données fait à partir du MCD et qui va nous permettre de faire la base de données sur MySQL</i> 
+    <br> <br>
+    <button id = "bouton_Projet">   <a href="https://github.com/etihaine/sucrerie" class="nounderline color-black" target="_blank">
+      Lien github des scripts de la Base de Données
+    </a> </button>
     
 </p></div>
 
@@ -70,7 +74,7 @@
   <br> puis la deuxième modification consistant à changer ce qui avait déjà été fait en Modèle Vue Contrôleur.
    <br>
    <br><button id = "bouton_Projet" >   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black center-text" target="_blank">
-        lien github du projet MVC
+        Lien github du projet MVC
       </a> </button>
 </p>
 </div>
@@ -87,11 +91,28 @@
     <br> voire même d'assigner ou de retirer des droits administrateur à un employé.
      <br>
      <br><button id = "bouton_Projet">   <a href="https://github.com/etihaine/personnel  " class="nounderline color-black" target="_blank">
-          lien github du projet Personnel
+          Lien github du projet Personnel
         </a> </button>
   </p>
   </div>
 
+  <div class="sous-titre">
+    <h3 class="font-alt font-w-600 center-text" >
+      Projet de Stage 1
+    </h3> </div>
+    <div>
+      <p>
+            Création d'une application avec le framework de Java : Spring, permettant de récupérer certaines parties d'un fichier présent sur un serveur distant et de les
+        <br> ranger dans une base de données Oracle prévu à cette effet. Les données prélevés vont permettre d'identifier les différentes erreurs qui peuvent 
+        <br> exister mais qui ne sont renvoyé qu'au serveur distant. On pourra également 
+        <br> connaître l'heure à laquelle chacune est arrivée et donc par conséquent leurs fréquence.
+        (utilisation de java et de son framework Spring, Oracle et regex)
+       <br>
+       <br><button id = "bouton_Projet">   <a href="image/carnet de bord.pdf" class="nounderline color-black" target="_blank">
+            Lien de mon carnet de bord
+          </a> </button>
+    </p>
+    </div>
 
 
     </html>
