--- a/portfolio.html
+++ b/portfolio.html
@@ -188,20 +188,20 @@
 </tr>
 <tr>
   <td>
-    <p><button id = "DL"><a class="nounderline color-black" href="projet.html" rel="noreferrer noopener" download=""
+    <p><button id = "DL"><a class="nounderline color-black" href="projet.html" rel="noreferrer noopener" download="">
     <strong> Accéder à mes projets </strong></a>
     </button>
     </p>
   </td>
   <td>
     <p>
-    <button id = "DL"><a  class="nounderline color-black" href="Veille.html" rel="noreferrer noopener" download=""
+    <button id = "DL"><a  class="nounderline color-black" href="Veille.html" rel="noreferrer noopener" download="">
     <strong> Accéder à ma veille </strong></a>
     </button>
     </p>
   </td>
   <td>
-    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf" rel="noreferrer noopener" download=""
+    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf" rel="noreferrer noopener" download="">
     <strong> Accéder à mon tableau des compétences </strong></a>
     </button>
     </p>
