tableau des compétence amélioration

--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
     </p>
   </td>
   <td>
-    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf" rel="noreferrer noopener" download="">
+    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf" rel="noreferrer noopener" download="" target="_blank">
     <strong> Accéder à mon tableau des compétences </strong></a>
     </button>
     </p>
