veille ajout et changement projet
finir projet et j'ai normalement fini la doc du 2eme stage

--- a/Veille.html
+++ b/Veille.html
@@ -85,7 +85,7 @@
             </td>
             <td>
               <p>
-                <b> 07/12/2022</b>) Google ajoute une extension de machine learning sur son application : google sheets gratuite permettant à des personnes sans expérience spécialisé en IA ou en machine learning pour en profiter facilement.
+                <b> 07/12/2022</b>) Google ajoute une extension de machine learning sur son application : google sheets gratuite permettant à des personnes sans expérience spécialisé en IA ou en machine learning d'en profiter facilement.
               </p>
             </td>
           </tr>
@@ -99,6 +99,7 @@
 
             <td>
               <p>
+                <a href="https://www.futura-sciences.com/tech/actualites/intelligence-artificielle-intelligence-artificielle-cree-neurotoxines-pires-toutes-celles-nous-connaissons-103460/" target="_blank"><img src="image/neurotoxine IA.png" style="width: 600px;height:351px;"> </a>
               </p>
             </td>
           </tr>
@@ -110,7 +111,35 @@
             </td>
             <td>
               <p>
-                <b></b>
+                <b>13/02/2023</b>) Une intelligence artificielle utilisée pour trouver des médicaments à été détournée exprès et à trouver en peu de temps de nombreuses neurotoxines plus mortel que celles connus.  
+
+              </p>
+            </td>
+          </tr>
+          <!-- 4eme ligne -->
+          <tr>
+            <td>
+              <p>
+                <a href="https://www.science-et-vie.com/cerveau-et-intelligence/intelligence-artificielle/chatgpt-musiclm-intelligence-artificielle-ecrit-musique-pour-vous-98150.html" target="_blank"><img src="image/machine learning art.png" style="width: 368px;height:460px;"> </a>
+            </p>
+            </td>
+
+            <td>
+              <p>
+                <a href="https://www.nouvelles-du-monde.com/chatgpt-arnaque-ecocrime-avec-avertissement-de-fraude-chatgpt-a-ete-un-sujet/" target="_blank"><img src="image/chatgpt phis.png" style="width: 600px;height:351px;"> </a>
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>
+                <b>13/02/2023</b>) Les intelligence artificielle peuvent créer des oeuvres artistiques telles que de la musique ou des peintures à partir de demande utilisateurs, et cela effraye les artistes qui ont peur de perdre leurs travail.
+              </p>
+            </td>
+            <td>
+              <p>
+                <b>20/02/2023</b>) Les IA telles que ChatGPT peuvent créer des e-mail de phishing sophistiqué et rapidement ce qui les rend plus difficile à repérer, néanmoins un hacker ethique rassure : pour battre l'intelligence artificielle et le machine learning il faut utiliser les même procédés. 
+
               </p>
             </td>
           </tr>
