--- a/portfolio.html
+++ b/portfolio.html
@@ -85,13 +85,13 @@
   <p>
     
 
-    création d'une page front web en Angular, Javascript et Spring.
+    création d'une page front web en Angular et Spring. Avec l'utilisation d'une base de données Oracle.
   </p>
   <table>
     <tr>
       <td>
         <p><button id = "DL">
-        <a class="wp-block-button__link nounderline color-black" href="image/Attestation de stage.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf" target="_blank">
+        <a class="wp-block-button__link nounderline color-black" href="image/Attestation de stage 1.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf" target="_blank">
         <strong> Mon attestation de stage  </strong></a>
     
         </button></p>
@@ -201,7 +201,7 @@
     </p>
   </td>
   <td>
-    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf" rel="noreferrer noopener" download="" target="_blank">
+    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf" rel="noreferrer noopener" download="">
     <strong> Accéder à mon tableau des compétences </strong></a>
     </button>
     </p>
