--- a/projet.html
+++ b/projet.html
@@ -33,14 +33,42 @@
  
 
 
-
    
 
 <div class="titre-page">
   <h1 class="font-alt color-white font-w-900 center-text">Mes Projets</h1>
   <br> </div>
+
+  <table class="tableau">
+
+    <tr>
+      <td>
+        <p>
+          <img src="image/tableau de synthèse/partie 1.png" >
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>
+          <img src="image/tableau de synthèse/partie 2.png" >
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>
+          <img src="image/tableau de synthèse/partie 3.png">
+        </p>
+      </td>
+    </tr>
+  
+  
+  </table>
   <div class="sous-titre">
     <h3 class="font-alt font-w-600 center-text" >
+
+      
       
         Merise et Base de Données 
       </h3>
