--- a/PHPMVC.html
+++ b/PHPMVC.html
@@ -34,17 +34,23 @@
 </head>
 <body>
 
-  <div class="titre-page">
-    <h1 class="font-alt color-white font-w-900 center-text">Me Contacter </h2>
-</div>
-<div>
-  <p> 
-    <h2 class="font-w-600 color-theme center titre ">Pour me contacter : </h2>
-  </p>
- <h3><div class="col-md-6 center-text contact">
-      <div class="indentation-list-contact ">- par mail : etiennemallarmeschwob@gmail.com</div>
-          <div class="indentation-list-contact">- Par téléphone : 06 49 99 94 92</div>
-          <div class="indentation-list-contact">- par instagram : etienne_mallasch</div>
 
-        </div></h3> 
-</div>
+    <div class="titre-page">
+        <h1 class="font-alt color-white font-w-900 center-text">Mes Projets</h1>
+        <br> </div>
+
+
+    <div class="sous-titre">
+        <h3 class="font-alt font-w-600 center-text" >
+          Festival
+        </h3> </div>
+        <div>
+          <p>
+              Modification d'un site internet par deux fois, la première afin de changer le contenu et de pouvoir utiliser du PHP en utilisant notamment les fonctions PDO,
+          <br> puis la deuxième modification consistant à changer ce qui avait déjà été fait en Modèle Vue Contrôleur.
+           <br>
+           <br><button id = "bouton_Projet" >   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black center-text" target="_blank">
+                Lien github du projet MVC
+              </a> </button>
+        </p>
+        </div>
