--- a/Personnel.html
+++ b/Personnel.html
@@ -34,17 +34,23 @@
 </head>
 <body>
 
-  <div class="titre-page">
-    <h1 class="font-alt color-white font-w-900 center-text">Me Contacter </h2>
-</div>
-<div>
-  <p> 
-    <h2 class="font-w-600 color-theme center titre ">Pour me contacter : </h2>
-  </p>
- <h3><div class="col-md-6 center-text contact">
-      <div class="indentation-list-contact ">- par mail : etiennemallarmeschwob@gmail.com</div>
-          <div class="indentation-list-contact">- Par téléphone : 06 49 99 94 92</div>
-          <div class="indentation-list-contact">- par instagram : etienne_mallasch</div>
+    <div class="titre-page">
+        <h1 class="font-alt color-white font-w-900 center-text">Mes Projets</h1>
+        <br> </div>
 
-        </div></h3> 
-</div>
+    <div class="sous-titre">
+        <h3 class="font-alt font-w-600 center-text" >
+          Personnel
+        </h3> </div>
+        <div>
+          <p>
+              Création d'un MCD ainsi que d'une application permettant de gérer les différents employés des différentes ligues de la M2L.
+          <br> Création de permission administrateur pour un employé par ligue, ainsi que d'une personne qui va pouvoir avoir les droits administrateurs de tout.
+          <br> L'application est effectuée en Java et permettra notamment de pouvoir ajouter, modifier ou supprimer des ligues ou encore des employés. 
+          <br> voire même d'assigner ou de retirer des droits administrateur à un employé.
+           <br>
+           <br><button id = "bouton_Projet">   <a href="https://github.com/etihaine/personnel  " class="nounderline color-black" target="_blank">
+                Lien github du projet Personnel
+              </a> </button>
+        </p>
+        </div>
