--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
       <img  id="fit-picture"src="image/pro3.jpg"> </div>
       <nav>
         <ul>
+          <li><a href="portfolio.html">Accueil</a></li>
+          
           <li class="menu-deroulant">
-            <a href="#">Services</a>
+            <a href="BTS.html">BTS SIO</a>
             <ul class="sous-menu">
-              <li><a href="#">Graphisme</a></li>
-              <li><a href="#">Web & App</a></li>
-              <li><a href="#">Marketing</a></li>
+              <li><a href="BTS.html">SLAM</a></li>
+              <li><a href="BTS.html">SISR</a></li>
             </ul>
           </li>
           <li class="menu-deroulant">
-            <a href="#">Réalisations</a>
+            <a href="projet.html">Projet</a>
             <ul class="sous-menu">
-              <li><a href="#">SpaceX</a></li>
-              <li><a href="#">Codeur.com</a></li>
+              <li><a href="MeriseBDD.html">Sucrerie</a></li>
+              <li><a href="PHPMVC.html">Festival</a></li>
+              <li><a href="Personnel.html">Personnel</a></li>
+              <li><a href="Parking.html">Parking</a></li>
+              <li><a href="Stage1.html">Stage 1ère année</a></li>
+              <li><a href="Stage2.html">Stage 2ème année</a></li>
             </ul>
           </li>
-          <li><a href="#">À propos</a></li>
-          <li><a href="#">Contactez-nous</a></li>
+          <li><a href="Veille.html">Veille</a></li>
+          <li><a href="contact.html">Me contacter</a></li>
         </ul>
       </nav>
 </head>
