--- a/Stage2.html
+++ b/Stage2.html
@@ -44,12 +44,81 @@
         </h3> </div>
         <div>
           <p>
-                Ajout dans un site intranet déjà existant de fonctionnalité permettant de rechercher au sein de la base de données Oracle de l'entreprise des référence produits par rapport à son numéro de série,
-             <br> puis de télécharger en format .csv tout les référence produit éxistant.  
+                Ajout dans un site intranet déjà existant de fonctionnalité permettant de rechercher au sein de la base de données Oracle de l'entreprise des référence produits par rapport 
+             <br>à son numéro de série, puis de télécharger en format .csv tout les référence produit existant.  
             <br> Mais également de pouvoir rechercher à partir d'un menu déroulant une catégorie d'adhérent et afficher tout les adhérents en rapport avec cette catégorie.
           <br>
             (utilisation de java et de son framework Spring, Oracle, ainsi que du framework Angular utilisant HTLM, CSS et Typescript)
-           <br>
+           <br> </p>
+           <p><br><img src="image/stage 2/demandeSite.png" class="image.centered img "></p>
+           <p>
+           <br> Voici ce qu'il m'étais demandé de faire sur le site intranet, en prenant en compte les fonctionnalité.
+           <br> Je devais également mettre en place un contrôle de saisie puisque les numéros de séries avaient un nombre maximal et minimal de caractères :
+           <table>
+            <tr>
+              <td>
+                <p>
+                <img src="image/stage 2/caractère min.png" class="image.centered img ">
+                <br> Ici on doit obligatoirement faire une recherche avec 1 caractère.
+              </p>
+              </td>
+              <td>
+                <p>
+                  <img src="image/stage 2/caractère max.png" class=" image.centered img">
+                  <br> Ici on ne peut pas entrer plus de caractère que ce qui est affiché.
+
+                </p>
+              </td>
+              </tr>
+          </table>
+          <p>
+          <br> Et voici les résultats obtenus lors de la fin de la mission : <br>
+        </p>
+          <table>
+            <tr>
+              <td>
+              <p>
+                Résultat de la première partie de la mission :
+              </p>
+            </td>
+            </tr>
+            <tr>
+              <td> <p> 
+              <img src="image/stage 2/résultat 1ere partie.png" class=" image.centered img">
+            </p>
+            </td>
+            </tr>
+            </table>
+            <table>
+            <tr>
+              <td>
+              <p>
+                Résultat de la deuxième partie de la mission :
+              </p>
+            </td>
+            </tr>
+            <tr>
+              <td> <p> 
+              <img src="image/stage 2/résultat 2eme partie.png" class=" image.centered img">
+            </p>
+            </td>
+            </tr>
+            </table>
+            <table>
+            <tr>
+              <td>
+              <p>
+                Résultat de la troisième partie de la mission :
+              </p>
+            </td>
+            </tr>
+            <tr>
+              <td> <p> 
+              <img src="image/stage 2/résultat dernière partie.png" class=" image.centered img">
+            </p>
+            </td>
+            </tr>
+          </table>
            <br><button id = "bouton_Projet">   <a href="image/doc 2eme stage.pdf" class="nounderline color-black" target="_blank">
                 Lien de mon carnet de bord
               </a> </button>
