--- a/projet.html
+++ b/projet.html
@@ -59,7 +59,7 @@
       </td>
       <td>
         <button id = "DL">
-          <a class="wp-block-button__link nounderline color-black " href="/projets/MeriseBDD.html">
+          <a class="wp-block-button__link nounderline color-black " href="MeriseBDD.html">
         <strong> Merise et Base de Données</strong></a>
       </td>
     </tr>
@@ -71,7 +71,7 @@
       </td>
       <td>
         <button id = "DL">
-          <a class="wp-block-button__link nounderline color-black " href="/projets/PHPMVC.html">
+          <a class="wp-block-button__link nounderline color-black " href="PHPMVC.html">
         <strong> Festival</strong></a>
       </td>
     </tr>
@@ -83,7 +83,7 @@
       </td>
       <td>
         <button id = "DL">
-          <a class="wp-block-button__link nounderline color-black " href="/projets/Personnel.html">
+          <a class="wp-block-button__link nounderline color-black " href="Personnel.html">
         <strong>Personnel</strong></a>
       </td>
     </tr>
@@ -107,7 +107,7 @@
       </td>
       <td>
         <button id = "DL">
-          <a class="wp-block-button__link nounderline color-black " href="/projets/Parking.html">
+          <a class="wp-block-button__link nounderline color-black " href="Parking.html">
         <strong> Parking</strong></a>
       </td>
     </tr>
@@ -119,7 +119,7 @@
       </td>
       <td>
         <button id = "DL">
-          <a class="wp-block-button__link nounderline color-black " href="/projets/Stage1.html">
+          <a class="wp-block-button__link nounderline color-black " href="Stage1.html">
         <strong> Réalisation en milieu professionnel (2021-2022) </strong></a>
       </td>
     </tr>
@@ -131,7 +131,7 @@
       </td>
       <td>
         <button id = "DL">
-          <a class="wp-block-button__link nounderline color-black " href="/projets/Stage2.html">
+          <a class="wp-block-button__link nounderline color-black " href="Stage2.html">
         <strong> Réalisation en milieu professionnel (2022-2023)</strong></a>
       </td>
     </tr>
