--- a/Parking.html
+++ b/Parking.html
@@ -62,10 +62,10 @@
           </tr>
                 <tr>
                   <td>
-                    <button id = "bouton_Projet"><a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Conception-de-la-Base-de-donn%C3%A9es" class="nounderline color-black" target="_blank">MCD</a></button>
+                    <button id = "bouton_Projet" ><a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Conception-de-la-Base-de-donn%C3%A9es" class="nounderline color-black" target="_blank">MCD</a></button>
                   </td>
                   <td>
-                    <button id = "bouton_Projet"><a href="https://githttps://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Maquette" class="nounderline color-black" target="_blank">Maquette du site </a></button>
+                    <button id = "bouton_Projet" style="margin-left: 230px;"><a href="https://githttps://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Maquette" class="nounderline color-black" target="_blank">Maquette du site </a></button>
                   </td>
                 </tr>
               </table>
