--- a/Stage2.html
+++ b/Stage2.html
@@ -92,14 +92,14 @@
             <table>
             <tr>
               <td>
-              <p>
+              <p style="margin-left: 1020px;">
                 Résultat de la deuxième partie de la mission :
               </p>
             </td>
             </tr>
             <tr>
               <td> <p> 
-              <img src="image/stage 2/résultat 2eme partie.png" class=" image.centered img">
+              <img src="image/stage 2/résultat 2eme partie.png" style="margin-left: 800px;">
             </p>
             </td>
             </tr>
