--- a/projet.html
+++ b/projet.html
@@ -54,7 +54,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 2.png" style="width: 1070px;height:50px;" >
+          <a href="MeriseBDD.html"><img src="image/tableau de synthèse/partie 2.png" style="width: 1070px;height:50px;"></a>
         </p>
       </td>
       <td>
@@ -66,7 +66,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 3.png" >
+          <a href="PHPMVC.html"><img src="image/tableau de synthèse/partie 3.png" ></a>
         </p>
       </td>
       <td>
@@ -78,7 +78,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 4.png" >
+          <a href="Personnel.html"><img src="image/tableau de synthèse/partie 4.png" ></a>
         </p>
       </td>
       <td>
@@ -90,7 +90,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 5.png" >
+          <a href="Veille.html"><img src="image/tableau de synthèse/partie 5.1.png" ></a>
         </p>
       </td>
       <td>
@@ -102,7 +102,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 6.png" >
+          <a href="Parking.html"><img src="image/tableau de synthèse/partie 6.png" ></a>
         </p>
       </td>
       <td>
@@ -114,7 +114,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 7.png" >
+          <a href="Stage1.html"><img src="image/tableau de synthèse/partie 7.png" ></a>
         </p>
       </td>
       <td>
@@ -126,7 +126,7 @@
     <tr>
       <td>
         <p>
-          <img src="image/tableau de synthèse/partie 8.png">
+          <a href="Stage2.html"> <img src="image/tableau de synthèse/partie 8.png"></a>
         </p>
       </td>
       <td>
