ajout footer et suppression de compétence

--- a/Parking.html
+++ b/Parking.html
@@ -102,3 +102,8 @@
               </a> </button>
         </p>
         </div>
+      </body>
+        <footer>
+        </footer>
+        
+        </html>
