--- a/Stage2.html
+++ b/Stage2.html
@@ -124,3 +124,8 @@
               </a> </button>
         </p>
         </div>
+      </body>
+      <footer>
+      </footer>
+      
+      </html>
