--- a/Stage2.html
+++ b/Stage2.html
@@ -7,7 +7,7 @@
     
     <nav>
       <ul>
-        <li><a href="portfolio.html">Accueil</a></li>
+        <li><a href="index.html">Accueil</a></li>
         
         <li class="menu-deroulant">
           <a href="BTS.html">BTS SIO</a>
