ajout festival et modif cv

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     Mon CV 
 </h3>
 <p><button id = "DL">
-  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB (1).pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf" target="_blank">
+  <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" download="Etienne Mallarmé Schwob  - Curriculum Vitae.pdf" target="_blank">
   <strong> Télécharger mon CV </strong></a>
   
 </button></p>
